reworked grade module